--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.782.0",
     "@aws-sdk/client-dynamodb": "^3.786.0",
+    "@aws-sdk/client-s3": "^3.817.0",
     "@aws-sdk/lib-dynamodb": "^3.786.0",
     "amazon-cognito-identity-js": "^6.3.15",
+    "aws-sdk": "^2.1692.0",
     "body-parse": "^0.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.0",
     "pg": "^8.14.1"
   },
   "name": "mates_backend",
