--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
     "@aws-sdk/client-s3": "^3.817.0",
     "@aws-sdk/lib-dynamodb": "^3.786.0",
     "amazon-cognito-identity-js": "^6.3.15",
+    "aws-jwt-verify": "^5.1.0",
     "aws-sdk": "^2.1692.0",
     "body-parse": "^0.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "multer": "^2.0.0",
-    "pg": "^8.14.1"
+    "pg": "^8.14.1",
+    "uuid": "^11.1.0"
   },
   "name": "mates_backend",
   "version": "1.0.0",
