--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
     "multer": "^2.0.0",
+    "nodemailer": "^7.0.4",
     "pg": "^8.14.1",
     "uuid": "^11.1.0"
   },
